--- a/src/generators/react17_antd4.0/src/index.less
+++ b/src/generators/react17_antd4.0/src/index.less
@@ -12,7 +12,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-.app {
-  color: @theme-color;
-  text-align: center;
+
+.main-layout {
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  .sider {
+    width: 280px;
+    border-right: 1px solid #ccc;
+  }
+  .container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+  .header {
+    height: 60px;
+    border-bottom: 1px solid #ccc;
+  }
+  .main {
+    flex: 1;
+  }
 }
