--- a/src/generators/react17_antd4.0/src/index.less
+++ b/src/generators/react17_antd4.0/src/index.less
@@ -8,29 +8,163 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
+/* ************************ MAIN LAYOUT ************************ */
 .main-layout {
   display: flex;
   height: 100vh;
-  width: 100%;
-  .sider {
-    width: 280px;
-    border-right: 1px solid #ccc;
+  .main-layout-sider {
+    width: @main-layout-sider-width;
+    background: @main-layout-sider-background;
+    background-color: @main-layout-sider-background;
   }
-  .container {
-    flex: 1;
+  .main-layout-main {
     display: flex;
+    flex: 1;
     flex-direction: column;
   }
-  .header {
-    height: 60px;
-    border-bottom: 1px solid #ccc;
+  .main-layout-header {
+    height: @header-height;
+    border-bottom: 1px solid #d6d6d6;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    .main-layout-logo {
+      cursor: pointer;
+    }
+    /* *********************** COVER ANTD *********************** */
+    .ant-menu {
+      border-bottom: none;
+      line-height: @header-height;
+      font-size: 18px;
+    }
+    .locale-selector {
+      width: 120px;
+      .ant-select-selector {
+        border-radius: 4px;
+      }
+    }
+    .main-layout-operation-avatar {
+      width: 42px;
+      height: 42px;
+      border-radius: 50%;
+      border: 1px solid #ccc;
+    }
+    .main-layout-operation-logout {
+      color: @theme-color;
+      font-size: 18px;
+    }
   }
-  .main {
+  .main-layout-wrapper {
+    padding: 20px;
     flex: 1;
   }
+}
+/* ************************ LOGIN PAGE ************************ */
+.login-page {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* ************************ NO-MATCHED && NO-ACCESS PAGE ************************ */
+.no-matched,
+.no-access {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-style: italic;
+}
+.no-access {
+  height: 100%;
+  font-size: 30px;
+}
+.no-matched {
+  height: 100vh;
+  font-size: 50px;
+}
+/* ************************ WELCOME PAGE ************************ */
+.welcome-page {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+}
+/* ************************ DASHBOARD PAGE ************************ */
+.dashboard-title {
+  font-size: 22px;
+  color: @theme-color;
+  color: rgba(0, 0, 0, 0.85);
+  margin-bottom: 20px;
+  position: relative;
+  padding-left: 20px;
+  &::before {
+    content: ' ';
+    position: absolute;
+    left: 0;
+    width: 4px;
+    height: 24px;
+    top: 50%;
+    margin-top: -12px;
+    background-color: @theme-color;
+  }
+}
+.dashboard-query {
+  margin-bottom: 20px;
+}
+.dashboard-main {
+  display: flex;
+  flex-wrap: wrap;
+}
+.dashboard-item {
+  width: 50%;
+  padding: 20px;
+
+  min-height: 450px;
+  border: 1px solid #d6d6d6;
+  border-top: none;
+  &:nth-child(1) {
+    border-top: 1px solid #d6d6d6;
+  }
+  &:nth-child(2) {
+    border-top: 1px solid #d6d6d6;
+  }
+  &:nth-child(2n) {
+    border-left: none;
+  }
+  &:nth-child(3n) {
+    border-top: none;
+  }
+}
+.dashboard-item-flex {
+  display: flex;
+  flex-direction: column;
+  min-height: 500px;
+}
+.viz-container-wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(235, 235, 235, 0.24);
+  .viz-container {
+    opacity: 0;
+  }
+}
+.viz-container {
+  width: 100%;
+  height: 100%;
+}
+.viz-operations {
+  min-height: 32px;
+  text-align: right;
+  margin-bottom: 10px;
+}
+.compare-date {
+  text-align: center;
+}
+/* ************************ DASHBOARD OVERVIEW PAGE ************************ */
+.dashboard-overview {
+}
+/* ************************ DASHBOARD DETAIL PAGE ************************ */
+.dashboard-detail-page {
 }
