--- a/src/generators/react17_antd4.0/src/index.less
+++ b/src/generators/react17_antd4.0/src/index.less
@@ -91,8 +91,8 @@ body {
   justify-content: center;
   font-size: 24px;
 }
-/* ************************ DASHBOARD PAGE ************************ */
-.dashboard-title {
+/* ************************ COMMON PAGE ************************ */
+.page-title {
   font-size: 22px;
   color: @theme-color;
   color: rgba(0, 0, 0, 0.85);
@@ -110,61 +110,10 @@ body {
     background-color: @theme-color;
   }
 }
-.dashboard-query {
+.page-query {
   margin-bottom: 20px;
 }
-.dashboard-main {
+.page-main {
   display: flex;
   flex-wrap: wrap;
-}
-.dashboard-item {
-  width: 50%;
-  padding: 20px;
-
-  min-height: 450px;
-  border: 1px solid #d6d6d6;
-  border-top: none;
-  &:nth-child(1) {
-    border-top: 1px solid #d6d6d6;
-  }
-  &:nth-child(2) {
-    border-top: 1px solid #d6d6d6;
-  }
-  &:nth-child(2n) {
-    border-left: none;
-  }
-  &:nth-child(3n) {
-    border-top: none;
-  }
-}
-.dashboard-item-flex {
-  display: flex;
-  flex-direction: column;
-  min-height: 500px;
-}
-.viz-container-wrapper {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(235, 235, 235, 0.24);
-  .viz-container {
-    opacity: 0;
-  }
-}
-.viz-container {
-  width: 100%;
-  height: 100%;
-}
-.viz-operations {
-  min-height: 32px;
-  text-align: right;
-  margin-bottom: 10px;
-}
-.compare-date {
-  text-align: center;
-}
-/* ************************ DASHBOARD OVERVIEW PAGE ************************ */
-.dashboard-overview {
-}
-/* ************************ DASHBOARD DETAIL PAGE ************************ */
-.dashboard-detail-page {
 }
