--- a/src/generators/react17_antd4.0_sider_submenu/src/index.less
+++ b/src/generators/react17_antd4.0_sider_submenu/src/index.less
@@ -28,6 +28,7 @@ body {
   }
   .main-layout-header {
     height: @header-height;
+    min-height: @header-height;
     border-bottom: 1px solid #d6d6d6;
     display: flex;
     align-items: center;
